--- a/challenge_1/index.html
+++ b/challenge_1/index.html
@@ -1,2 +1,15 @@
-
-
+<!DOCTYPE html>
+<head>
+</head>
+<body>
+  <h1>Tic Tac Toe</h1>
+  <main>
+    <table id="game-board">
+    </table>
+  </main>
+  <footer>
+    <button type='submit' class='new-game' value="New Game" />
+  </footer>
+  <script src='./app.js'>
+  </script>
+</body>
