Implement board class, with board checking and game resetting capabilities

--- a/challenge_1/index.html
+++ b/challenge_1/index.html
@@ -2,13 +2,15 @@
 <head>
 </head>
 <body>
-  <h1>Tic Tac Toe</h1>
+  <header>
+    <h1>Tic Tac Toe</h1>
+  </header>
   <main>
     <table id="game-board">
     </table>
   </main>
   <footer>
-    <button type='submit' class='new-game' value="New Game" />
+    <button id='new-game' type='submit'></button>
   </footer>
   <script src='./app.js'>
   </script>
