Create basic server structure for challenge 2
Imported express, lodash, $, and nodemon for file system. Skeletal
structure only, no real functionality.

--- a/challenge_2/client/index.html
+++ b/challenge_2/client/index.html
@@ -1,2 +1,17 @@
-
-
+<!DOCTYPE html>
+<head>
+  <title>
+    JSON server practice
+  </title>
+</head>
+<body>
+  <header></header>
+  <main>
+    <form>
+      <input type="text" />
+      <button type="submit" value="submit">
+    </form>
+    <div id="app"> <!-- fill with more flat html -->
+    </div>
+  </main>
+</body>
