--- a/challenge_2/client/src/index.html
+++ b/challenge_2/client/src/index.html
@@ -7,11 +7,11 @@
 <body>
   <header></header>
   <main>
-    <form>
-      <input type="text" />
-      <button type="submit" value="submit">
+    <form action="/csv" method="POST">
+      <input type="text" name="form-data"/>
     </form>
     <div id="app"> <!-- fill with more flat html -->
+      
     </div>
   </main>
 </body>
