--- a/challenge_3/public/index.html
+++ b/challenge_3/public/index.html
@@ -1,2 +1,13 @@
-
-
+<!DOCTYPE html>
+<head>
+  <title>Glamazon</title>
+  <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
+  <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
+</head>
+<body>
+  <header>Glamazon Shopping</header>
+  <main>
+    <div id="app"></div>
+  </main>
+  <script src="./app.js"></script>
+</body>
