--- a/challenge_3/public/index.html
+++ b/challenge_3/public/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <head>
   <title>Glamazon</title>
-  <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
-  <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
+  <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
+  <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+  <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
-  <header>Glamazon Shopping</header>
-  <main>
-    <div id="app"></div>
-  </main>
+  <div id="app"></div>
   <script src="./app.js"></script>
+  </script>
 </body>
