--- a/challenge_4/public/index.html
+++ b/challenge_4/public/index.html
@@ -1,2 +1,8 @@
-
-
+<!DOCTYPE html>
+<head>
+    <title>Connect 4</title>
+</head>
+<body>
+    <div id="app"></div>
+    <script src="./bundle.js"></script>
+</body>
