Clean up TicTacToe functions, add jsDoc function comments

--- a/challenge_1/index.html
+++ b/challenge_1/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <head>
+  <title>Tic Tac Toe</title>
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <header>
+  <header id="header">
     <h1>Tic Tac Toe</h1>
   </header>
   <main>
-    <table id="game-board">
+    <table id="game_board">
     </table>
   </main>
   <footer>
-    <button id='new-game' type='submit'></button>
+    <button id='new_game' type='button'>New Game?</button>
   </footer>
   <script src='./app.js'>
   </script>
