Implement csv string generation
Project still requires logic for file writing and reading, client
rendering of the files in storage, data from the files on request,
removal of last commas in csv files, and success page rendering.

--- a/challenge_2/client/src/index.html
+++ b/challenge_2/client/src/index.html
@@ -7,11 +7,15 @@
 <body>
   <header></header>
   <main>
-    <form action="/csv" method="POST">
-      <input type="text" name="form-data"/>
+    <h4>Put your JSON data here!</h4>
+    <form action="/csv" method="post">
+      <textarea type="JSON" name="form-data"></textarea>
+      <button>click me!</button>
     </form>
     <div id="app"> <!-- fill with more flat html -->
-      
     </div>
+    <script>
+
+    </script>
   </main>
 </body>
